--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=dkagh3mfzla!
+spring.datasource.password=12431243
 
 # Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
